tests/code/pages/errors/call-php.tht
fun main {
    Php.require('PhpModule.php')
    Php.call('runtime_error')
}
